# fifa-bet-alert

./: .dockerignore  .env.example  .gitignore  CHANGELOG_AUDIT.md  CLAUDE.md  Dockerfile  PRD.md  docker-compose.yml  pyproject.toml  railway.toml  render.yaml  requirements.txt
backups/: blocked_lines-pre-v3-2026-04-29.json
scripts/: _migrate_blocked_v2_granular.py  analysis_deep.py  analysis_ml_deep.py  analysis_ml_win.py  analysis_part2.py  backfill_method_stats.py  backfill_player_stats.py  backfill_team_stats.py  backtest.py  backup_blocked_lines_pre_v3.py  check_recent.py  collect_history.py  count_api_load.py  fix_unedited_alerts.py  fix_wrong_scores.py  migrate_add_over15_odds.py  migrate_add_pnl.py  migrate_blocked_lines.py  migrate_m2_shadow.py  migrate_shadow_v2_reset.py  migrate_shadow_v3_h2h.py  mock_full_day_report.py  populate_matchup_stats.py  rebuild_csv_today.py  recompute_blocked.py  rollback_shadow_v3.py  scrape_bet365.py  sync_free_group_members.py  test_cache_and_poll.py  test_hourly_report.py  test_pipeline.py  test_watch_predictor.py  validate_api.py  verify_results.py
src/: config.py  main.py
tests/: test_alert_engine_free.py  test_alert_engine_v3.py  test_alert_free_repo.py  test_free_odds_tracking.py  test_free_report.py  test_free_status.py  test_free_telegram.py  test_integration.py  test_m3_repository.py  test_pair_predictive_hook.py  test_predictive_watch.py  test_probability.py  test_reporter.py  test_return_offset.py  test_send_watch.py  test_stats_engine_v3.py  test_synthetic_match.py  test_telegram_v3.py  test_validator_free.py  (+1 more)
(+51 files in other folders)
